...
    <string name="HINT_JOB_SALARY">Salary</string>
    <string name="EMPLOYER_EMAIL">Employer Email</string>
    <string name="SELECT_PDF">Select your PDF file</string>

    <!-- Error Messages -->
    <string name="EMPTY_USERNAME">Please enter a username</string>
    <string name="EMPTY_EMAIL_ADDRESS">Please enter your email</string>
    <string name="INVALID_EMAIL_ADDRESS">Invalid email address</string>
    <string name="EMPTY_PASSWORD">Please enter a password</string>
    <string name="INVALID_PASSWORD">A password must be at least 8 characters long</string>
    <string name="EMPTY_NAME">Please enter your name</string>
    <string name="EMPTY_PHONE_NUMBER">Please enter a contact number</string>
    <string name="INVALID_PHONE_NUMBER">A phone number must be exactly 10 characters long</string>
    <string name="INVALID_ROLE">Please select a role</string>
    <string name="EMAIL_NOT_FOUND">Email address does not exist in our records</string>
    <string name="EMAIL_ALREADY_IN_USE">That email already exists in the database</string>
    <string name="failed_to_send_message">Failed to send the message.</string>

    <!--Dialog Text-->
    <string name="MARK_JOB_COMPLETE_TITLE">Mark Job Complete</string>
    <string name="MARK_JOB_COMPLETE_MESSAGE">Do you want to mark this job as complete?</string>
    <string name="MARK_JOB_COMPLETE_POSITIVE">Complete</string>
...
